# nowcast_lstm

./: .gitattributes  .gitignore  README.md  README_UV.md  pyproject.toml  setup.py
.github/workflows/: test.yml
example/: nowcast_lstm_example.ipynb  requirements.txt
nowcast_lstm_example/: data.csv  nowcast_lstm_example.py  trained_model.pkl
tests/: test_data_leakage.py  test_modelling.py
